--- a/crisp/partials/follow.hbs
+++ b/crisp/partials/follow.hbs
@@ -1,8 +1,8 @@
 <div id="follow-icons">
-	<a href="http://facebook.com/username"><i class="fa fa-facebook-square fa-2x"></i></a>
-	<a href="http://twitter.com/username"><i class="fa fa-twitter-square fa-2x"></i></a>
-	<a href="http://linkedin.com/in/username"><i class="fa fa-linkedin-square fa-2x"></i></a>
-	<a href="mailto:you@example.com"><i class="fa fa-envelope-square fa-2x"></i></a>
+	<a href="http://facebook.com/realdeliocastillo"><i class="fa fa-facebook-square fa-2x"></i></a>
+	<a href="http://twitter.com/jangeador"><i class="fa fa-twitter-square fa-2x"></i></a>
+	<a href="http://linkedin.com/in/deliocastillo"><i class="fa fa-linkedin-square fa-2x"></i></a>
+	<a href="mailto:deliocastillo@deliocastillo.com"><i class="fa fa-envelope-square fa-2x"></i></a>
 	<a href="{{@blog.url}}/rss"><i class="fa fa-rss-square fa-2x"></i></a> 
 </div>                                                                  
 
