--- a/crisp/post.hbs
+++ b/crisp/post.hbs
@@ -10,7 +10,7 @@
 <div id="comments">
 	<div id="disqus_thread"></div>
 	<script type="text/javascript">
-	    var disqus_shortname = 'jangeador'; // required: replace example with your shortname
+	    var disqus_shortname = 'delicoastilloblog'; // required: replace example with your shortname
 	    var disqus_identifier = '{{id}}';
 	    (function() {
 	        var dsq = document.createElement('script'); dsq.type = 'text/javascript'; dsq.async = true;
